# design-factory

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  GOVERNANCE.md  LICENSE  NOTICE  README.en.md  README.md  ROADMAP.md  SECURITY.md  SPIKE-FINDINGS.md  SUPPORT.md  package-lock.json  package.json  playwright.config.ts  start.bat  start.command  update.bat  update.command  vite.config.ts  vitest.config.ts
.claude/: CLAUDE.md
.claude/skills/: .gitkeep
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  tauri-spike.yml
apps/daemon/: README.md  package.json
docs/: FEATURE-COVERAGE.md  OPEN-SOURCE-CHECKLIST.md  PUBLIC-CUT-MANIFEST.md  PUBLIC-DOCS-REVIEW.md  README.md  SMOKE-RUNBOOK.md  agent-contract.md  architecture-canon.md  architecture.md  design-systems.md  direction-engine.md  i18n-baseline.txt  index.md  migration-skills.md  project-files.md  providers.md  quickstart.md  skills.md  troubleshooting.md
examples/: README.md  dashboard-stat-row.html  landing-hero.html  pricing-card.html
landing/: README.md  index.html  vercel.json
scripts/: build-daemon-bin.mjs  cleanup-orphan-projects.mjs  daemon-smoke.mjs  dev-web.mjs  e2e-leak-regression.mjs  e2e-providers.mjs  i18n-audit.mjs  public-files-smoke.mjs  validate-modals.mjs
scripts/audit-full/: run.sh  (+1 more)
skills/: README.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
(+396 files in other folders)
